Modify spacing between Sponsor rows. Fix misaligned Community Support section. Add links to sponsor images.

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@ strong{
 .card-info{
   padding-bottom:20px;
 }
+.sponsor-row {
+    text-align: center;
+    margin: 5% 5% 5% 5%;
+}
 .sponsor-image{
   width:25%;
   opacity: 0.5;
